force-app/main/default/objects/Replenishment__c/Replenishment__c.object-meta.xml
<CustomObject>
    <description>回補額度紀錄</description>
    <label>Replenishment</label>
    <nameField>
        <displayFormat>RE{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Replenishment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replenishment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>