force-app/main/default/objects/Replenishment__c/fields/Account_Unlocked__c.field-meta.xml
<CustomField>
    <fullName>Account_Unlocked__c</fullName>
    <description>帳號解鎖</description>
    <label>Account Unlocked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>