force-app/main/default/objects/Replenishment__c/fields/Applicant_Department__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Department__c</fullName>
    <description>申請人部門</description>
    <label>Applicant Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>