force-app/main/default/objects/Replenishment__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>申請人</description>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>