force-app/main/default/objects/Replenishment__c/fields/Applicant_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Number__c</fullName>
    <label>Applicant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>