force-app/main/default/objects/Replenishment__c/fields/BPM_No__c.field-meta.xml
<CustomField>
    <fullName>BPM_No__c</fullName>
    <description>BPM編號</description>
    <externalId>true</externalId>
    <label>BPM No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>