force-app/main/default/objects/Replenishment__c/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <description>統一編號</description>
    <formula>AccountId__r.Business_Number__c</formula>
    <label>Business Number</label>
    <type>Text</type>
</CustomField>