force-app/main/default/objects/Replenishment__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <description>城市碼</description>
    <label>Airport Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KHH</fullName>
            </value>
            <value>
                <fullName>TPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>