force-app/main/default/objects/Replenishment__c/fields/Credit_Contact__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact__c</fullName>
    <description>旅行社申請人</description>
    <label>Credit Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>