force-app/main/default/objects/Replenishment__c/fields/Credit_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Phone__c</fullName>
    <description>旅行社申請人電話</description>
    <label>Credit Contact Phone</label>
    <type>TextArea</type>
</CustomField>