force-app/main/default/objects/Replenishment__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>備註</description>
    <label>Remark</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>