force-app/main/default/objects/Replenishment__c/fields/Replenishment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Replenishment_Amount__c</fullName>
    <description>回補金額</description>
    <label>Replenishment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>